# adventofcode

./: README.md
2015/: dune-project
2015/D01/: D01.ml  dune
2015/D25/: D25.ml  dune
2024/: aoc_2024.opam
2024/D01/: D01.ml  dune
2024/D02/: D02.ml  dune
2024/D03/: D03.ml  dune  main_2.ml
2024/D04/: D04.ml  dune
2024/D05/: D05.ml  dune
2024/D06/: D06.ml  dune
2024/D07/: D07.ml  dune
auto_setup/: .ocamlformat  dune-project
auto_setup/lib/: config.ml  dune  input.ml
auto_setup/test/: dune
